--- a/css/agency.css
+++ b/css/agency.css
@@ -9,15 +9,15 @@ p {
 }
 
 a {
-  color: #fed136;
+  color: #24d8cf;
 }
 
 a:hover {
-  color: #fec503;
+  color: #24d8cf;
 }
 
 .text-primary {
-  color: #fed136 !important;
+  color: #24d8cf !important;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -56,18 +56,18 @@ section h3.section-subheading {
 }
 
 .btn-xl {
-  font-size: 18px;
-  padding: 20px 40px;
+  font-size: 16px;
+  padding: 15px 25px;
 }
 
 .btn-primary {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #24d8cf;
+  border-color: #24d8cf;
 }
 
 .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
-  background-color: #fec810 !important;
-  border-color: #fec810 !important;
+  background-color: #24d8cf !important;
+  border-color: #24d8cf !important;
   color: white;
 }
 
@@ -77,7 +77,7 @@ section h3.section-subheading {
 }
 
 ::selection {
-  background: #fed136;
+  background: #24d8cf;
   text-shadow: none;
 }
 
@@ -100,17 +100,17 @@ img::-moz-selection {
   text-transform: uppercase;
   color: white;
   border: 0;
-  background-color: #fed136;
+  background-color: #24d8cf;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 #mainNav .navbar-brand {
-  color: #fed136;
+  color: #24d8cf;
   font-family: 'Kaushan Script', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 #mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-  color: #fec503;
+  color: #24d8cf;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
@@ -123,7 +123,7 @@ img::-moz-selection {
 }
 
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #fed136;
+  color: #24d8cf;
 }
 
 @media (min-width: 992px) {
@@ -169,7 +169,7 @@ header.masthead .intro-text {
   padding-bottom: 100px;
 }
 
-header.masthead .intro-text .intro-lead-in {
+header.masthead .intro-lead-in {
   font-size: 22px;
   font-style: italic;
   line-height: 22px;
@@ -178,30 +178,24 @@ header.masthead .intro-text .intro-lead-in {
 }
 
 header.masthead .intro-text .intro-heading {
-  font-size: 50px;
+  font-size: 20px;
   font-weight: 700;
-  line-height: 50px;
-  margin-bottom: 25px;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 @media (min-width: 768px) {
   header.masthead .intro-text {
-    padding-top: 300px;
-    padding-bottom: 200px;
+    padding-top: 200px;
+    padding-bottom: 100px;
   }
   header.masthead .intro-text .intro-lead-in {
     font-size: 24px;
     font-style: italic;
-    line-height: 40px;
-    margin-bottom: 25px;
     font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
   header.masthead .intro-text .intro-heading {
-    font-size: 75px;
+    font-size: 15px;
     font-weight: 700;
-    line-height: 75px;
-    margin-bottom: 50px;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
 }
@@ -231,7 +225,7 @@ header.masthead .intro-text .intro-heading {
   -webkit-transition: all ease 0.5s;
   transition: all ease 0.5s;
   opacity: 0;
-  background: rgba(254, 209, 54, 0.9);
+  background: #24d8cf;
 }
 
 #portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
@@ -432,7 +426,7 @@ header.masthead .intro-text .intro-heading {
   color: white;
   border: 7px solid #e9ecef;
   border-radius: 100%;
-  background-color: #fed136;
+  background-color: #24d8cf;
 }
 
 .timeline>li .timeline-image h4 {
@@ -601,7 +595,7 @@ section#contact .form-group textarea.form-control {
 }
 
 section#contact .form-control:focus {
-  border-color: #fed136;
+  border-color: #24d8cf;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -669,5 +663,17 @@ ul.social-buttons li a {
 }
 
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
-  background-color: #fed136;
+  background-color: #24d8cf;
+}
+
+.myimage img {
+  padding: 0;
+  margin: 0;
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  border: 15px solid transparent;
+  position: relative;
+  z-index: 9999;
+  transition: all 0.3s ease-out;
 }
